[gd_scene load_steps=6 format=3 uid="uid://66uavv5dcadh"]

[ext_resource type="Script" uid="uid://ckqddvtcmb6t5" path="res://hotdog_scenes/bun.gd" id="1_bojff"]
[ext_resource type="Texture2D" uid="uid://dadsn0p6rddok" path="res://art/Base Hotdog/bun.png" id="2_hqe1x"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_mseav"]
bounce = 0.2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8ule1"]
radius = 15.0
height = 230.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gydrx"]
radius = 30.0
height = 230.0

[node name="Bun" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_mseav")
script = ExtResource("1_bojff")
metadata/_edit_group_ = true

[node name="CollisionShape2DPhysics" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8ule1")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_hqe1x")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2DMouse" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_gydrx")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(3.5, -7.5)
scale = Vector2(10.35, 2.35)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
